[package]
name = "itelex"
version = "0.0.2"
authors = ["soruh <mail@soruh.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", optional = true, features = ["derive"]}
anyhow = "1.0"
thiserror = "1.0"

[features]
default = ["server", "client", "serde_deserialize", "serde_serialize"]

client = []
server = []
serde_deserialize = ["serde"]
serde_serialize = ["serde"]