[package]
name = "itelex"
version = "0.2.0"
authors = ["soruh <mail@soruh.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
binserde = { version = "0.1.1", git = "https://github.com/soruh/binserde" }
binserde-derive = { version = "0.1.1", git = "https://github.com/soruh/binserde" }

[features]
default = ["server", "client", "centralex"]

client = []
centralex = []
server = []
serde_deserialize = ["serde"]
serde_serialize = ["serde"]
